Update and rename web.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Document</title>
-    <link rel="StyleSheet" type="text/css" href="css/web.css">
-    <script src="javascript/web.js" charset="utf-8"></script>
+    <link rel="StyleSheet" type="text/css" href="css/style.css">
+    <script src="javascript/index.js" charset="utf-8"></script>
     <!---Boostrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
