--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Document</title>
-    <link rel="StyleSheet" type="text/css" href="css/style.css">
+    <link rel="StyleSheet" type="text/css" href="style.css">
     <script src="javascript/index.js" charset="utf-8"></script>
     <!---Boostrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
