--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <button class="dropdown-toggle" type="button" data-toggle="dropdown">projects
                             <span class="caret"></span></button>
                             <ul class="dropdown-menu">
-                              <li><a href="calculator1.html">calculator</a></li>
+                              <li><a href="css/calculator/index.html">calculator</a></li>
                               <li><a href="#">Cards</a></li>
                               <li> <a  href="#pricing">Membership</a></li>
                             </ul>
